examples/test/testpolicy762.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy762
  namespace: namespace278
spec:
  podSelector:
    matchLabels:
      key32: value19
      key20: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value30
          key44: value30
          key32: value33
      podSelector:
        matchLabels:
          key15: value18
          key27: value27
          key1: value13
